--- a/src/Components/Homepgsty.css
+++ b/src/Components/Homepgsty.css
@@ -35,7 +35,7 @@ img{
 }
 .abtpt{
     color:#CFB9A5;
-    background-color: #403233;
+    background-color: #2b2526;
     height: 550px;
     margin:50px;
     border-radius: 10px;
